Updated education details
also updated all working experience

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <i class="uil uil-github-alt"></i>
               </a>
               <a
-                href="#"
+                href="https://t.me/prashantgavel"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -264,15 +264,15 @@
           </p>
           <div class="about__info">
             <div>
-              <span class="about__info-title">07+</span>
+              <span class="about__info-title">06+</span>
               <span class="about__info-name"
-                >Years <br />
+                >month <br />
                 experience</span
               >
             </div>
 
             <div>
-              <span class="about__info-title">20+</span>
+              <span class="about__info-title">5+</span>
               <span class="about__info-name"
                 >Projects <br />
                 completed</span
@@ -280,7 +280,7 @@
             </div>
 
             <div>
-              <span class="about__info-title">04+</span>
+              <span class="about__info-title">03+</span>
               <span class="about__info-name"
                 >Companies <br />
                 worked</span
@@ -373,19 +373,19 @@
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/sass.svg"
+            src="/assets/img/skills/bootstrap.svg"
             alt="sass"
           />
-          <div class="skills__container-name">SASS</div>
+          <div class="skills__container-name">Bootstrap</div>
         </div>
 
         <div class="skills__container-box">
           <img
             class="skills__container-img"
-            src="/assets/img/skills/firebase.svg"
+            src="/assets/img/skills/mysql.svg"
             alt="firebase"
           />
-          <div class="skills__container-name">Firebase</div>
+          <div class="skills__container-name">MySQL</div>
         </div>
 
         <!-- <div class="skills__container-box">
@@ -429,10 +429,10 @@
             <!--==================== QUALIFICATOIN 1====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Software Engineer</h3>
-                <span class="qualification__subtitle"> Tech Mahindra </span>
+                <h3 class="qualification__title">Web Development Intern</h3>
+                <span class="qualification__subtitle"> CHiPS </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2015-2018
+                  <i class="uil uil-calendar-alt"></i> Mar'22-Aug'22
                 </div>
               </div>
 
@@ -450,10 +450,10 @@
                 <span class="qualification__line"></span>
               </div>
               <div>
-                <h3 class="qualification__title">Frontend Developer</h3>
-                <span class="qualification__subtitle"> Mobikasa </span>
+                <h3 class="qualification__title">Intern</h3>
+                <span class="qualification__subtitle"> Future Ready Talent </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2018-2019
+                  <i class="uil uil-calendar-alt"></i> Feb 2022
                 </div>
               </div>
             </div>
@@ -461,15 +461,15 @@
             <!--==================== QUALIFICATOIN 3====================-->
             <div class="qualification__data">
               <div>
-                <h3 class="qualification__title">Lead Engineer</h3>
-                <span class="qualification__subtitle"> HCL </span>
+                <h3 class="qualification__title">Academic Reasearch</h3>
+                <span class="qualification__subtitle"> Pt. Ravishankar Shukla University, Raipur(C.G.) </span>
                 <div class="qualification__calender">
                   <i class="uil uil-calendar-alt"></i> 2019-2020
                 </div>
               </div>
               <div>
                 <span class="qualification__rounder"></span>
-                <span class="qualification__line"></span>
+                <!-- <span class="qualification__line"></span> -->
               </div>
             </div>
 
@@ -477,14 +477,14 @@
             <div class="qualification__data">
               <div></div>
               <div>
-                <span class="qualification__rounder"></span>
+                <!-- <span class="qualification__rounder"></span> -->
                 <!-- <span class="qualification__line"></span> -->
               </div>
               <div>
-                <h3 class="qualification__title">UI/UX Engineer</h3>
-                <span class="qualification__subtitle"> Rakuten </span>
+                <h3 class="qualification__title"></h3>
+                <span class="qualification__subtitle"> </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2020-2022
+                  <!-- <i class="uil uil-calendar-alt"></i>  -->
                 </div>
               </div>
             </div>
@@ -497,10 +497,10 @@
               <div>
                 <h3 class="qualification__title">HSC, Science</h3>
                 <span class="qualification__subtitle">
-                  St. Mary's Academy
+                  CGBSE BOARD
                 </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2009-2011
+                  <i class="uil uil-calendar-alt"></i> 2015-16
                 </div>
               </div>
 
@@ -515,16 +515,30 @@
               <div></div>
               <div>
                 <span class="qualification__rounder"></span>
-                <!-- <span class="qualification__line"></span> -->
+                <span class="qualification__line"></span>
               </div>
               <div>
-                <h3 class="qualification__title">B.Tech, Electronics</h3>
-                <span class="qualification__subtitle"> Sharda University </span>
+                <h3 class="qualification__title">B.Sc. Computer Science</h3>
+                <span class="qualification__subtitle"> Bilaspur University </span>
                 <div class="qualification__calender">
-                  <i class="uil uil-calendar-alt"></i> 2011-2015
+                  <i class="uil uil-calendar-alt"></i> 2019
                 </div>
               </div>
             </div>
+             <!--==================== QUALIFICATOIN 3====================-->
+       <div class="qualification__data">
+        <div>
+          <h3 class="qualification__title">Master of Computer Applications</h3>
+          <span class="qualification__subtitle"> Pt. Ravishankar Shukla University,Raipur (C.G.) </span>
+          <div class="qualification__calender">
+            <i class="uil uil-calendar-alt"></i> 2019-2022
+          </div>
+        </div>
+        <div>
+          <span class="qualification__rounder"></span>
+          <!-- <span class="qualification__line"></span> -->
+        </div>
+      </div>
           </div>
         </div>
       </div>
