Fix bugs on qualification data

--- a/index.html
+++ b/index.html
@@ -315,65 +315,67 @@
         <div class="qualification__content qualification__active" data-content id="work">
           <!--==================== QUALIFICATOIN 1====================-->
           <div class="qualification__data">
+            <div>
+              <h3 class="qualification__title">Academic Research</h3>
+              <span class="qualification__subtitle"> Pt. Ravishankar Shukla University, Raipur (C. G.) </span>
+              <div class="qualification__calender">
+                <i class="uil uil-calendar-alt"></i> 2019-2020
+              </div>
+            </div>
+
+            <div>
+              <span class="qualification__rounder"></span>
+              <span class="qualification__line"></span>
+            </div>
+          </div>
+
+          <!--==================== QUALIFICATOIN 2====================-->
+          <div class="qualification__data">
             <div></div>
             <div>
               <span class="qualification__rounder"></span>
               <span class="qualification__line"></span>
             </div>
             <div>
-              <h3 class="qualification__title">Assistant Programmer</h3>
-              <span class="qualification__subtitle">National Informatics Centre, MeitY</span>
+              <h3 class="qualification__title">Intern</h3>
+              <span class="qualification__subtitle"> Future Ready Talent </span>
               <div class="qualification__calender">
-                <i class="uil uil-calendar-alt">14-Jan-2022-Present</i>
+                <i class="uil uil-calendar-alt"></i> Feb '22
+              </div>
+            </div>
+          </div>
+
+          <!--==================== QUALIFICATOIN 3====================-->
+          <div class="qualification__data">
+            <div>
+              <h3 class="qualification__title">Intern</h3>
+              <span class="qualification__subtitle"> CHiPS (Chhattisgarh Infotech Promotion Society)</span>
+              <div class="qualification__calender">
+                <i class="uil uil-calendar-alt"></i> Mar '22 - Aug '22
+              </div>
+            </div>
+            <div>
+              <span class="qualification__rounder"></span>
+              <span class="qualification__line"></span>
+            </div>
+          </div>
+
+          <!--==================== QUALIFICATOIN 4====================-->
+          <div class="qualification__data">
+            <div></div>
+            <div>
+              <span class="qualification__rounder"></span>
+              <!-- <span class="qualification__line"></span> -->
+            </div>
+            <div>
+              <h3 class="qualification__title">Assistant Programmer</h3>
+              <span class="qualification__subtitle"> National Informatics Center </span>
+              <div class="qualification__calender">
+                <i class="uil uil-calendar-alt"></i> 14-Jan-2022-Present
               </div>
             </div>
           </div>
         </div>
-        <!--==================== QUALIFICATOIN 2====================-->
-        <div class="qualification__data">
-          <div>
-            <h3 class="qualification__title">Web Development Intern</h3>
-            <span class="qualification__subtitle"> CHiPS </span>
-            <div class="qualification__calender">
-              <i class="uil uil-calendar-alt"></i> Mar'22-Aug'22
-            </div>
-          </div>
-
-          <div>
-            <span class="qualification__rounder"></span>
-            <span class="qualification__line"></span>
-          </div>
-        </div>
-        <!--==================== QUALIFICATOIN 3====================-->
-        <div class="qualification__data">
-          <div></div>
-          <div>
-            <span class="qualification__rounder"></span>
-            <span class="qualification__line"></span>
-          </div>
-          <div>
-            <h3 class="qualification__title">Intern</h3>
-            <span class="qualification__subtitle"> Future Ready Talent </span>
-            <div class="qualification__calender">
-              <i class="uil uil-calendar-alt"></i> Feb 2022
-            </div>
-          </div>
-        </div>
-        <!--==================== QUALIFICATOIN 4====================-->
-        <div class="qualification__data">
-          <div>
-            <h3 class="qualification__title">Academic Reasearch</h3>
-            <span class="qualification__subtitle"> Pt. Ravishankar Shukla University, Raipur(C.G.) </span>
-            <div class="qualification__calender">
-              <i class="uil uil-calendar-alt"></i> 2019-2020
-            </div>
-          </div>
-          <div>
-            <span class="qualification__rounder"></span>
-            <span class="qualification__line"></span>
-          </div>
-        </div>
-
 
         <!--==================== QUALIFICATOIN CONTENT 2====================-->
         <div class="qualification__content" data-content id="education">
@@ -385,7 +387,7 @@
                 CGBSE BOARD
               </span>
               <div class="qualification__calender">
-                <i class="uil uil-calendar-alt"></i> 2015-16
+                <i class="uil uil-calendar-alt"></i> 2015-2016
               </div>
             </div>
 
@@ -404,9 +406,9 @@
             </div>
             <div>
               <h3 class="qualification__title">B.Sc. Computer Science</h3>
-              <span class="qualification__subtitle"> Bilaspur University </span>
+              <span class="qualification__subtitle"> Atal Bihari Vajpaye University, Bilaspur </span>
               <div class="qualification__calender">
-                <i class="uil uil-calendar-alt"></i> 2019
+                <i class="uil uil-calendar-alt"></i> 2017-2019
               </div>
             </div>
           </div>
@@ -414,11 +416,14 @@
           <div class="qualification__data">
             <div>
               <h3 class="qualification__title">Master of Computer Applications</h3>
-              <span class="qualification__subtitle"> Pt. Ravishankar Shukla University,Raipur (C.G.) </span>
+              <span class="qualification__subtitle">
+                Pt. Ravishankar Shukla University, Raipur (C.G.)
+              </span>
               <div class="qualification__calender">
                 <i class="uil uil-calendar-alt"></i> 2019-2022
               </div>
             </div>
+
             <div>
               <span class="qualification__rounder"></span>
               <!-- <span class="qualification__line"></span> -->
@@ -456,12 +461,14 @@
               <li class="services__modal-service">
                 <i class="uil uil-check-circle services__modal-icon"></i>
                 <!-- <p></p> -->
-                <a href="https://drive.google.com/file/d/1K1A_WO1kx9smpWrSYX_B3tFsec8wGy_M/view?usp=sharing">E-Pass PPT</a>
+                <a href="https://drive.google.com/file/d/1K1A_WO1kx9smpWrSYX_B3tFsec8wGy_M/view?usp=sharing">E-Pass
+                  PPT</a>
               </li>
               <li class="services__modal-service">
                 <i class="uil uil-check-circle services__modal-icon"></i>
                 <!-- <p>I handle website hosting</p> -->
-                <a href="https://drive.google.com/file/d/11AtI88eKBJ9kG5MUktzPQ0sDoHxeerCy/view?usp=sharing">Project thesis</a>
+                <a href="https://drive.google.com/file/d/11AtI88eKBJ9kG5MUktzPQ0sDoHxeerCy/view?usp=sharing">Project
+                  thesis</a>
               </li>
               <!-- <li class="services__modal-service">
                 <i class="uil uil-check-circle services__modal-icon"></i>
@@ -592,17 +599,17 @@
         </div>
       </div> -->
 
-      <!-- Add arrows -->
-      <div class="swiper-button-next">
-        <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
-      </div>
-      <div class="swiper-button-prev">
-        <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
-      </div>
+        <!-- Add arrows -->
+        <div class="swiper-button-next">
+          <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+        </div>
+        <div class="swiper-button-prev">
+          <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+        </div>
 
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
-    </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+      </div>
   </section>
 
   <!--==================== PROJECT IN MIND ====================-->
