--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </div>
             <div>
               <h3 class="qualification__title">Assistant Programmer</h3>
-              <span class="qualification__subtitle"> National Informatics Center </span>
+              <span class="qualification__subtitle"> National Informatics Centre </span>
               <div class="qualification__calender">
                 <i class="uil uil-calendar-alt"></i> 14-Jan-2022-Present
               </div>
