--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       <div class="services__content">
         <div>
           <i class="uil uil-mobile-android services__icon"></i>
-          <h3 class="services__title">More<br />Projects</h3>
+          <h3 class="services__title">More Documents<br /></h3>
         </div>
 
         <span class="button button--flex button--small button--link services__button">
@@ -502,9 +502,11 @@
             <ul class="services__modal-services grid">
               <li class="services__modal-service">
                 <i class="uil uil-check-circle services__modal-icon"></i>
+                <a href="https://drive.google.com/file/d/1K1A_WO1kx9smpWrSYX_B3tFsec8wGy_M/view?usp=sharing">E-Pass
+                  PPT</a>
                 <p></p>
               </li>
-              <!-- <li class="services__modal-service">
+              <li class="services__modal-service">
                 <i class="uil uil-check-circle services__modal-icon"></i>
                 <p>I create apps for mobile and tablets</p>
               </li>
@@ -515,7 +517,7 @@
               <li class="services__modal-service">
                 <i class="uil uil-check-circle services__modal-icon"></i>
                 <p>I optimize application performances</p>
-              </li> -->
+              </li>
             </ul>
           </div>
         </div>
