Profile pic updated

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <span class="section__subtitle">My Introduction</span>
 
     <div class="about__container container grid">
-      <img src="assets/img/mypic.jpg" alt="" class="about__image" />
+      <img src="assets/img/mypicanime.avif" alt="" class="about__image" />
 
       <div class="about__data">
         <p class="about__description">
@@ -220,7 +220,7 @@
           </div>
 
           <div>
-            <span class="about__info-title">03+</span>
+            <span class="about__info-title">02+</span>
             <span class="about__info-name">Companies <br />
               worked</span>
           </div>
