--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <span class="section__subtitle">My Introduction</span>
 
     <div class="about__container container grid">
-      <img src="assets/img/mypicanime.avif" alt="" class="about__image" />
+      <img src="assets/img/mypicanime.jpg" alt="" class="about__image" />
 
       <div class="about__data">
         <p class="about__description">
@@ -371,7 +371,7 @@
               <h3 class="qualification__title">Assistant Programmer</h3>
               <span class="qualification__subtitle"> National Informatics Centre </span>
               <div class="qualification__calender">
-                <i class="uil uil-calendar-alt"></i> 14-Jan-2022-Present
+                <i class="uil uil-calendar-alt"></i> 14-Nov-2022-Present
               </div>
             </div>
           </div>
@@ -530,7 +530,6 @@
   <section class="portfolio section" id="portfolio">
     <h2 class="section__title">Portfolio</h2>
     <span class="section__subtitle">Most recent work</span>
-
     <div class="portfolio__container container swiper-container">
       <div class="swiper-wrapper">
         <!--==================== PORTFOLIO 1====================-->
